Suppress JDK 24+ sun.misc.Unsafe warning in forked asset compiler
On JDK 24+ (JEP 498) the JVM warns on first use of sun.misc.Unsafe
memory-access methods. The forked AssetCompiler JVM always triggers this:
its classpath carries protobuf-java, and Closure Compiler deserializes its
bundled runtime-library TypedASTs with protobuf, whose UnsafeUtil probes
Unsafe.arrayBaseOffset during class initialization
(protocolbuffers/protobuf#20760, no fix scheduled upstream). Since the
task forks a fresh JVM per compile, the once-per-process warning shows up
on every build.

Pass --sun-misc-unsafe-memory-access=allow to the forked JVM when running
on JDK 24+, unless the build author already set that flag via
assets.forkOptions.jvmArgs. Same approach Gradle takes with
-XX:+EnableDynamicAgentLoading for its test workers. Becomes a no-op once
protobuf migrates to VarHandles.